<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <!-- video: como criar icones que não perdem resolução -->
        <EditTextPreference
            app:key="signature"
            app:icon="@drawable/ic_login"
            app:title="@string/signature_title"
            app:defaultValue="Não Definida"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="Responder apenas ao remetente"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <!-- dependência de sync - so ativo quando sync estiver ativo -->
        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>